--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h1>Hey wify</h1>
 <img src="https://www.ftdimg.com/pics/products/FK652_VA0017T_330x370.jpg"></img>
 </br>
-<h1>Please forive me ok?</h1>
+<h1>Please forgive me ok?</h1>
